Bug 87646 - Fix ENABLE_IFRAME_SEAMLESS to actually fully disable <iframe seamless>
Summary: Fix ENABLE_IFRAME_SEAMLESS to actually fully disable <iframe seamless>
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Eric Seidel (no email)
URL:
Keywords: InRadar
Depends on:
Blocks: 45950
  Show dependency treegraph
 
Reported: 2012-05-28 03:15 PDT by Eric Seidel (no email)
Modified: 2012-09-18 12:01 PDT (History)
8 users (show)

See Also:


Attachments
Patch (2.65 KB, patch)
2012-05-28 03:18 PDT, Eric Seidel (no email)
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Seidel (no email) 2012-05-28 03:15:51 PDT
Fix ENABLE_IFRAME_SEAMLESS to actually fully disable <iframe seamless>
Comment 1 Eric Seidel (no email) 2012-05-28 03:18:46 PDT
Created attachment 144320 [details]
Patch
Comment 2 Eric Seidel (no email) 2012-05-28 03:51:21 PDT
Apple may want to pull this into their release branches, since I believe they've disabled seamless there.
Comment 3 Radar WebKit Bug Importer 2012-05-29 13:23:19 PDT
<rdar://problem/11550608>
Comment 4 WebKit Review Bot 2012-05-29 19:28:33 PDT
Comment on attachment 144320 [details]
Patch

Clearing flags on attachment: 144320

Committed r118883: <http://trac.webkit.org/changeset/118883>
Comment 5 WebKit Review Bot 2012-05-29 19:28:38 PDT
All reviewed patches have been landed.  Closing bug.
Comment 6 Sam Weinig 2012-05-30 13:13:23 PDT
What is the symptom if this bug is not incorporated?  Is there a user visible effect?
Comment 7 Adam Barth 2012-05-30 13:27:29 PDT
> What is the symptom if this bug is not incorporated?  Is there a user visible effect?

The symptom is that an iframe with the seamless attribute would exhibit some of the seamless behaviors (e.g., style inheritance), but not all of them (e.g., redirected navigation).  The effect should only be visible in content that attempts to use the seamless attribute.
Comment 8 Sam Weinig 2012-05-30 14:41:12 PDT
(In reply to comment #7)
> > What is the symptom if this bug is not incorporated?  Is there a user visible effect?
> 
> The symptom is that an iframe with the seamless attribute would exhibit some of the seamless behaviors (e.g., style inheritance), but not all of them (e.g., redirected navigation).  The effect should only be visible in content that attempts to use the seamless attribute.

Thanks Adam.